# forge

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  install.sh  pyproject.toml  setup.sh  uninstall.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
daemon/: artifacts.py  attachments.py  billing.py  budget.py  chunker.py  cli.py  compaction.py  config.py  context_window.py  custom_commands.py  db.py  events.py  filefetch.py  folder_dialog.py  gitctl.py  grammars.py  hooks.py  locality.py  log.py  main.py  mcp_server.py  memory_tool.py  mode.py  model_setup.py  models.py  ollama_models.py  output_styles.py  parsing.py  pool.py  recovery.py  redact.py  refusal.py  replay.py  requirements.txt  routing.py  safety.py  sanitize.py  scheduler.py  slash.py  wizard.py  (+2 more)
daemon/agents/: classifier.py  document.py  evaluator.py  generator.py  planner.py  researcher.py  reviewer.py
daemon/connectors/: __init__.py  registry.py
daemon/executors/: batch.py  claude_code.py  mlx.py  ollama.py  openai_compatible.py
daemon/llms/: __init__.py  registry.py
daemon/memory/: embeddings.py  episodic.py  kb_guard.py  knowledge.py  learner.py  procedural.py  research.py  retriever.py
daemon/scanner/: claude_code.py  project.py  repomap.py  tools.py
daemon/skills/: __init__.py  dispatch.py  lethal_trifecta.py  lock.py  registry.py  runtime.py
daemon/tui/: __init__.py  app.py  ws_client.py
docs/: BUILD_PLAN.md  CODE_REVIEW.md  COMPETITIVE_COMPARISON.md  CONNECTORS.md  DECISIONS.md  DELIVERY_PLAN.md  ENGINEERING_STANDARDS.md  EXECUTION_PLAN.md  FORGE_STUDIO_BUILD.md  FORGE_STUDIO_TRACKER.md  GAP_ANALYSIS.md  HANDOVER.md  LLMS.md  PLUGIN_DEVELOPMENT.md  POSITIONING.md  PROMPTS_AND_GUARDRAILS.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  SKILLS.md  SPRINT_6_PLAN.md  USER_GUIDE.md  WEBSOCKET_PROTOCOL.md  architecture.md  configuration.md  harness-design.md  memory-system.md  security.md
docs/audits/2026-06-03-forge-studio/: FINDINGS.md  REPORT.md
docs/audits/2026-06-04-forge-studio/: FINDINGS.md  REPORT.md
docs/research/: competitive-landscape-and-architecture.md
docs/research/notes/: 01-codebase-review.md  02a-closed-source-agents.md  02b-open-source-frameworks.md  02c-2g-swarm-and-decisions.md  02d-open-weight-llms.md  02e-2f-memory-sandbox-desktop.md  03-engineering-best-practices.md  04-anthropic-best-practices.md  05-competitive-freshness-2026-04-30.md  06-review-r1-functionality.md  07-review-r2-code-quality.md  08-review-r3-security.md
eval/swebench/: README.md  __init__.py  adapter.py  metrics.py  report.py  tiers.py  verify.py
forge_plugin_api/: __init__.py  connector.py  http.py  llm.py  testing.py
mockups/: 01-main-chat.html  02-empty-state.html  03-merge-gate.html  04-wizard.html  05-knowledge-base.html  index.html
reference_plugins/git/: SKILL.md  manifest.toml
reference_plugins/git/scripts/: main.py
reference_plugins/web_research/: SKILL.md  manifest.toml
reference_plugins/web_research/scripts/: main.py
scripts/: audit-docs.py  check-schema-parity.py  pre-push.sh
tests/: conftest.py  egress_guard.py  test_agents_md.py  test_artifacts.py  test_attachments.py  test_audit_2026_06_03.py  test_audit_2026_06_04.py  test_audit_fixes.py  test_budget.py  test_capability_reapproval.py  test_chunker.py  test_classifier.py  test_cli_plugin_commands.py  test_cli_verbs.py  test_compaction.py  test_confidence_reinforcement.py  test_config_studio.py  test_context_window.py  test_cross_family_evaluator.py  test_custom_commands.py  test_db_lifecycle.py  test_document_agent.py  test_egress_guard.py  test_embeddings.py  test_episodic.py  test_evaluator.py  test_events.py  test_executor_pivot.py  test_filefetch.py  test_folder_dialog.py  test_generator_context_budget.py  test_gitctl.py  test_grammars.py  test_hooks.py  test_hybrid_retrieval.py  test_integration_wiring.py  test_kb_guard.py  test_knowledge.py  test_learner.py  test_locality.py  (+47 more)
ui/: package-lock.json  package.json  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: AttachMenu.tsx  BenchProfileSelect.tsx  ContextMeter.tsx  ContextSizePicker.tsx  CostMeter.tsx  EvaluatorPanel.tsx  LearningLog.tsx  LocalityIndicator.tsx  MemoryBrowser.tsx  MergeGate.tsx  MetadataBar.tsx  ModePicker.tsx  ModelPicker.tsx  OutputStream.tsx  PlanView.tsx  PoolMeter.tsx  ProjectBar.tsx  PromptInput.tsx  ResearchPanel.tsx  ReviewPanel.tsx  SessionHistory.tsx  SlashCommandPalette.tsx  TaskDashboard.tsx  TranscriptView.tsx  WorktreeCard.tsx
ui/hooks/: useForgeSocket.ts
ui/lib/: types.ts
